# TuringMachine

frame/: CMakeLists.txt  README.md
frame/programs/: case1.tm  case2.tm
frame/turing-project/: TM.cpp  TM.h  main.cpp
